@startuml
skinparam linetype ortho

entity users {
  +id : INTEGER <<PK>>
  --
  username : VARCHAR(20)
  password : VARCHAR(100)
  activation_key : VARCHAR(30)
  reset_key : VARCHAR(30)
  email : VARCHAR(50)
  activated : BOOLEAN
  created : DATETIME
  updated : DATETIME
}

entity systems {
  +id : INTEGER <<PK>>
  --
  name : VARCHAR(40)
  description : TEXT
  repository : VARCHAR(100)
  created : DATETIME
  updated : DATETIME
}

entity roles {
  +id : INTEGER <<PK>>
  --
  name : VARCHAR(40)
  created : DATETIME
  updated : DATETIME
  system_id : INTEGER <<FK>>
}

entity permissions {
  +id : INTEGER <<PK>>
  --
  name : VARCHAR(40)
  created : DATETIME
  updated : DATETIME
  role_id : INTEGER <<FK>>
}

entity systems_users {
  +id : INTEGER <<PK>>
  --
  system_id : INTEGER <<FK>>
  user_id : INTEGER <<FK>>
  created : DATETIME
}

entity users_permissions {
  +id : INTEGER <<PK>>
  --
  user_id : INTEGER <<FK>>
  permission_id : INTEGER <<FK>>
  created : DATETIME
}

entity users_roles {
  +id : INTEGER <<PK>>
  --
  user_id : INTEGER <<FK>>
  role_id : INTEGER <<FK>>
  created : DATETIME
}

systems ||--o{ roles : has
roles ||--o{ permissions : has

users ||--o{ systems_users : assigned
systems ||--o{ systems_users : includes

users ||--o{ users_permissions : granted
permissions ||--o{ users_permissions : uses

users ||--o{ users_roles : granted
roles ||--o{ users_roles : uses

@enduml
